# fried-egg

./: .gitignore  Cargo.toml  README.md  build-fried-egg.sh  build.rs  build.sh  input.json  input1.json
.circleci/: config.yml
src/: lib.rs  lin_inv.rs  logical_equality.rs  main.rs  optimize.rs  ruler-rules.json  statement.rs  tac.rs  tac_optimizer.udl  tac_optimizer.uniffi.rs
src/uniffi/tac_optimizer/: tac_optimizer.kt
